--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,33 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0 auto;
-background:rgb(0, 255, 191);
+  background-color: #3A98B9;
 }
 
 
-button {
-background-color: rgb(243, 0, 0);
-border-radius: 2px;
+.button {
 
+  display: inline-block;
 
-  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  padding: 10px 20px;
+
+  font-size: 16px;
+
+  cursor: pointer;
+
+  text-align: center;
+
+  text-decoration: none;
+
+  outline: none;
+
+  color: #000000;
+
+  background-color:#ffffff;
+
+  border: none;
+
+  border-radius: 10px;
+
+  box-shadow: 0 6px #999;
 }
-
-
